<resources>
    <string name="app_name">restaurant</string>
    <string name="goods_unit_of_measure">计量单位：</string>
    <string name="goods_unit_price">单价：</string>
    <string name="monetary_unit">元</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="search_goods_item">查找商品</string>
    <string name="title_activity_order_manager">orderManagerActivity</string>
    <string name="commit_shopping_cart">提交商品</string>
    <string name="goods_of_quantity">数量：</string>
    <string name="goods_unit_of_price">单价:</string>
    <string name="unit_of_measure">单位：</string>
    <string name="unit_of_price">单价：</string>
    <string name="total">小计：</string>
    <string name="update_action">修  改</string>
    <string name="delete_action">删  除</string>
</resources>
