<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:jmf="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
                name="goods"
                type="com.owner.basemodule.room.entities.Goods" />

        <variable
                name="checkEvent"
                type="com.owner.basemodule.functional.Consumer" />

        <variable
                name="clickEvent"
                type="com.owner.basemodule.functional.Consumer" />
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="#00F5F2F2"
            android:onClick="@{()->clickEvent.accept(goods)}"
            app:cardCornerRadius="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.jmf.addsubutils.AddSubUtils
                    android:id="@+id/add_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    jmf:contentWidth="30dp"
                    jmf:editable="true" />

            <CheckBox
                    android:id="@+id/cb_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{()->checkEvent.accept(goods)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_goods_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{goods.goodsName}"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cb_goods"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="商品名称" />


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{goods.newPrice == 0.0f?View.GONE:View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_goods_name"
                    app:layout_constraintStart_toStartOf="@+id/textView4">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="新单价："
                        android:textColor="@color/common_red" />

                <TextView
                        android:id="@+id/tv_new_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{String.valueOf(goods.newPrice)}"
                        android:textColor="@color/common_red"
                        tools:text="0.0" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="元"
                        android:textColor="@color/common_red" />
            </LinearLayout>

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/goods_unit_of_measure"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_goods_name" />

            <TextView
                    android:id="@+id/tv_goods_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{goods.unitOfMeasurement}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    tools:text="斤" />

            <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/goods_unit_price"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_goods_unit"
                    app:layout_constraintStart_toEndOf="@+id/tv_goods_unit"
                    app:layout_constraintTop_toTopOf="@+id/tv_goods_unit" />

            <TextView
                    android:id="@+id/tv_goods_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(goods.unitPrice)}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    tools:text="10.5" />

            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/monetary_unit"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_goods_price"
                    app:layout_constraintStart_toEndOf="@+id/tv_goods_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>


